--- a/templates/todos/list.html.hbs
+++ b/templates/todos/list.html.hbs
@@ -4,15 +4,93 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rocket • TodoTurbolinks</title>
+        <link rel="stylesheet" href="/css/base.css">
+        <link rel="stylesheet" href="/css/index.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="/js/app.js"></script>
     </head>
 	<body>
-        <form action="/todo" method="post">
-            <input name="description" autofocus>
-        </form>
-        <ul>
-            {{#each todos}}
-                <li>{{this.description}}</li>
-            {{/each}}
-        </ul>
+		<section class="todoapp">
+            <header class="header">
+                <h1>todos</h1>
+                <form action="/todo?filter={{this.current_filter}}" method="post">
+                    <input class="new-todo" name="description" placeholder="What needs to be done?" autofocus>
+                </form>
+            </header>
+			<section class="main">
+                {{#if this.flags.special_cases.at_least_one}}
+                    <form action="/todos?filter={{this.current_filter}}" method="post">
+                        <input type="hidden" name="_method" value="patch" />
+
+                        {{#if this.flags.special_cases.all_completed}}
+                            <input type="hidden" name="command" value="activate_all" />
+                        {{else}}
+                            <input type="hidden" name="command" value="complete_all" />
+                        {{/if}}
+
+                        <input id="toggle-all"
+                               class="toggle-all"
+                               type="checkbox"
+                               {{#if this.flags.special_cases.all_completed}} checked {{/if}}
+                               onchange="this.parentNode.submit()">
+                        <label for="toggle-all">Mark all as complete</label>
+                    </form>
+                {{/if}}
+				<ul class="todo-list">
+                    {{#each todos}}
+                        <li id="todo-{{this.id}}" class="todo-item {{#if this.completed}}completed{{/if}}">
+                            <div class="view">
+                                <form action="/todo/{{this.id}}?filter={{../this.current_filter}}" method="post">
+                                    <input type="hidden" name="_method" value="patch" />
+                                    <input type="hidden" name="completed" value="off" />
+                                    <input class="toggle"
+                                           name="completed"
+                                           type="checkbox"
+                                           onchange="this.parentNode.submit()"
+                                           {{#if this.completed}} checked {{/if}}>
+                                    <label ondblclick='startDescriptionEditing("todo-{{this.id}}");'>{{this.description}}</label>
+                                </form>
+                                <form action="/todo/{{this.id}}?filter={{../this.current_filter}}" method="post">
+                                    <input type="hidden" name="_method" value="delete" />
+                                    <button class="destroy"></button>
+                                </form>
+                            </div>
+                            <form action="/todo/{{this.id}}?filter={{../this.current_filter}}" method="post">
+                                <input type="hidden" name="_method" value="patch" />
+                                <input class="edit" name="description" value="{{this.description}}">
+                            </form>
+                        </li>
+                    {{/each}}
+				</ul>
+			</section>
+            {{#if this.flags.special_cases.at_least_one}}
+                <footer class="footer">
+                    <span class="todo-count"><strong>{{this.active_count}}</strong> item left</span>
+                    <ul class="filters">
+                        <li>
+                            <a {{#if this.flags.filters.all}} class="selected" {{/if}} href="/todos?filter=all">All</a>
+                        </li>
+                        <li>
+                            <a {{#if this.flags.filters.active}} class="selected" {{/if}} href="/todos?filter=active">Active</a>
+                        </li>
+                        <li>
+                            <a {{#if this.flags.filters.completed}} class="selected" {{/if}} href="/todos?filter=completed">Completed</a>
+                        </li>
+                    </ul>
+                    {{#if this.flags.special_cases.any_completed }}
+                        <form action="/todos?filter={{this.current_filter}}" method="post">
+                            <input type="hidden" name="_method" value="patch" />
+                            <input type="hidden" name="command" value="clear_completed" />
+                            <button class="clear-completed">Clear completed</button>
+                        </form>
+                    {{/if}}
+                </footer>
+            {{/if}}
+		</section>
+		<footer class="info">
+			<p>Double-click to edit a todo</p>
+			<p>Created by <a href="https://twitter.com/map_and_filter">Pavlo Mitin</a></p>
+			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+		</footer>
 	</body>
 </html>
